# Imoogi

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake.yml
.github/workflows /: blank.yml
doc/sphinx_docs/: Makefile  README.md  conf.py  index.rst  pyproject.toml
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.cpp  test_1.cpp
